tests/NormalTests/paczka1/fuzzy1/54878469.err
Error in line 3: F2709myL9d A533 68,88
Error in line 12: XsMUD S232 42,36
Error in line 9: XsMUD A533 46,2
Error in line 7: DR8GVe S739 302,5
Error in line 13: XsMUD S232 33,7
Error in line 20: A322 A533 46,4
Error in line 26: XsMUD S232 1î3,9
Error in line 24: A322 A322 77,3
Error in line 29: A322 S739 90,1
Error in line 18: XsMUD S232 41,6
Error in line 5: F2709myL9d A533 304,8
Error in line 14: DR8GVe A533 82,4
